exam/fastapi-service-ngrok.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-nodeport
  namespace: standard
spec:
  selector:
    app: fastapi
  ports:
  - port: 5000
    targetPort: 5000
    nodePort: 30001
  type: NodePort
