exam/fastapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi
  namespace: standard
spec:
  selector:
    app: fastapi
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
